Capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-add-settime-capability
  name: pod-add-settime-capability
spec:
  containers:
  - command: ["/bin/sh","-c"]
    args: 
    - sleep 3600
    - date +%T -s "16:00:00"
    image: alpine
    name: pod-add-settime-capability
    securityContext:
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
    resources: {}
  restartPolicy: Always
