HardLimits.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cka-pod
  name: cka-pod
  namespace: cka-exam
spec:
  containers:
  - image: nginx
    name: cka-pod
    resources:
      limits:
        memory: "20Mi"
        cpu: "0.5"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
