SecContext.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: read-onlypod
  name: read-onlypod
spec:
  volumes:
  - name: my-volume
    emptyDir: {}
  containers:
  - image: alpine
    name: read-onlypod
    command: ['sh', '-c', 'sleep 3600']
    volumeMounts:
    - name: my-volume
      mountPath: /data
      readOnly: false
    resources:
      limits:
        memory: "20Mi"
        cpu: "200m"
    securityContext:
      readOnlyRootFilesystem: true
