sideCar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi-container-pod
  name: multi-container-pod
spec:
  volumes:
  - name: main-volume
    emptyDir: {}
  containers:
  - args:
    - /bin/sh
    - -c
    - > 
      i=0; 
      while true; 
      do echo "$i: $(date)" >> /var/log/cka-exam.log; 
      i=$((i+1)); 
      sleep 1; 
      done
    image: busybox:1.28
    name: main
    resources:
      limits:
        memory: "20Mi"
        cpu: "0.5"
    volumeMounts:
      - name: main-volume
        mountPath: /var/log
  - name: sidecar
    image: busybox:1.28
    resources:
      limits:
        memory: "20Mi"
        cpu: "0.5"
    args:
    - /bin/sh
    - -c
    - "tail -n+1 -F /var/log/cka-exam.log"
    volumeMounts:
      - name: main-volume
        mountPath: /var/log
  dnsPolicy: ClusterFirst
  restartPolicy: Always
