sqldeploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cka-deployment
  name: cka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cka-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: cka-deployment
    spec:
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: cka-pvc
      containers:
      - image: devopstitan/cka-exam:mysql-question-09
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        resources: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: cka-service
  name: cka-service
spec:
  ports:
  - name: "3306"
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: cka-service
  type: ClusterIP
