NetworkPolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox1
  name: busybox1
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: busybox1

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox2
  name: busybox2
spec:
  containers:
  - command:
    - sleep
    - "1800"
    image: busybox
    name: busybox2

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: busybox1
      ports:
        - protocol: TCP
          port: 80
