networkPolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cka-networkpolicy
  namespace: web
spec:
  podSelector:
    matchLabels:
      run: webserver
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to :
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: app
        - podSelector:
            matchLabels:
              run: appserver
      ports:
        - protocol: TCP
          port: 8080
    - to :
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
        - podSelector:
            matchLabels:
              run: dbserver
      ports:
        - protocol: TCP
          port: 6379
